--- a/src/css/fiba.css
+++ b/src/css/fiba.css
@@ -2,11 +2,44 @@ body {
   padding-top: 50px;
 }
 mark {
-  background-color: #5bc0de;
+  /*background-color: #5bc0de;*/
+  color: #fff;
+  background-color: #000099;
+}
+.navbar-inverse {
+  background-color: #000099;
+  border: 0;
+}
+.navbar-brand {
+  background-color: #fff;
+}
+.navbar-inverse .navbar-brand {
+  font-weight: 800;
+  color: #D40D12;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #fff;
+  font-weight: bold;
+}
+.jumbotron {
+  margin-bottom: 60px;
+  background-color: #fff;
 }
 .carousel {
   padding: 0;
 }
 p.intro-text {
   line-height: 200%;
+}
+.gallery-row {
+  margin-bottom: 30px;
+}
+.fiba-header {
+  background-color: #EEEEEE;
+  color: #000099;
+  font-size: 16pt;
+  font-weight: bold;
+}
+.fiba-content {
+  margin-bottom: 30px;
 }
