--- a/src/css/fiba.css
+++ b/src/css/fiba.css
@@ -70,3 +70,21 @@ p.intro-text {
 .fiba-contact {
   padding: 0;
 }
+.fiba-contact p {
+  margin-top: 14px;
+  margin-bottom: 14px;
+  display: block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  box-sizing: border-box;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #fff;
+}
+.fiba-hide {
+  visibility: hidden;
+}
